@@ -304,6 +304,9 @@ Trunk (unreleased changes)
     HADOOP-3605. Make EC2 scripts show an error message if AWS_ACCOUNT_ID is
     unset. (Al Hoang via tomwhite)
 
+    HADOOP-4147. Remove unused class JobWithTaskContext from class
+    JobInProgress. (Amareshwari Sriramadasu via johan)
+
   OPTIMIZATIONS
 
     HADOOP-3556. Removed lock contention in MD5Hash by changing the 
